# chip8

./: CMakeLists.txt  README.md
include/: chip8.h  chip8_op.h
src/: chip8.c  chip8_op.c  main.c
